--- a/requirements.txt
+++ b/requirements.txt
@@ -1,14 +1,18 @@
 Flask==0.10.1
+Flask-Bootstrap==3.0.3.1
+Flask-Migrate==1.1.0
+Flask-Moment==0.2.1
 Flask-SQLAlchemy==1.0
-Flask-PyMongo==0.3.0
-Flask-WTF==0.9.5
-Jinja2==2.7.3
-MarkupSafe==0.23
-SQLAlchemy==0.9.4
+Flask-Script==0.6.6
+Flask-WTF==0.9.4
+Jinja2==2.7.1
+Mako==0.9.1
+MarkupSafe==0.18
+SQLAlchemy==0.8.4
 WTForms==1.0.5
-Werkzeug==0.9.6
-argparse==1.2.1
-itsdangerous==0.24
+Werkzeug==0.9.4
+
+alembic==0.6.2
+blinker==1.3
+itsdangerous==0.23
 requests==2.3.0
-wsgiref==0.1.2
-pymongo==2.7.1
